--- a/config.json
+++ b/config.json
@@ -36,7 +36,7 @@
             "filename": "wechatRSS.opml"
         },
         "chinese-independent-blogs": {
-            "enabled": false,
+            "enabled": true,
             "url": "https://raw.githubusercontent.com/timqian/chinese-independent-blogs/master/feed.opml",
             "filename": "chinese-independent-blogs.opml"
         }
